--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -69,7 +69,7 @@
 <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-annotations</artifactId>
-  <version>2.3.0</version>
+  <version>2.3.1</version>
 </dependency>
 <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -84,9 +84,13 @@
 <dependency> -->
   <groupId>com.fasterxml.jackson.module</groupId>
   <artifactId>jackson-module-jaxb-annotations</artifactId>
-  <version>2.2.0</version>
+  <version>2.3.1</version>
 </dependency>
-
+<dependency>
+  <groupId>com.fasterxml.jackson.dataformat</groupId>
+  <artifactId>jackson-dataformat-yaml</artifactId>
+  <version>2.3.1</version>
+</dependency>
 <!-- ::2.1.0 -->
             
         <!-- TEST -->
