MID-1112 - Added Enable/Disable and Delete resource account functionallity to ResourceContentPage. Improved search as well as some other minor improvements.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -25,7 +25,16 @@ pageContentAccounts.message.cantImportAccount=Can't import account, oid={0}
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
+pageContentAccounts.message.deleteConfirmation=Do you really want to delete {0} account(s) from this resource?
+pageContentAccounts.message.deleteConfirmationSingle=Do you really want to delete '{0}' account from this resource?
 pageContentAccounts.menu.changeOwner=Change owner
-pageContentAccounts.menu.importAccount=Import Account
+pageContentAccounts.menu.importAccount=Import Account(s)
 pageContentAccounts.menu.removeOwner=Remove owner
+pageContentAccounts.menu.disableAccount=Disable Account
+pageContentAccounts.menu.deleteAccount=Delete Account
+pageContentAccounts.menu.enableAccount=Enable Account
+pageContentAccounts.menu.disableAccounts=Disable Account(s)
+pageContentAccounts.menu.deleteAccounts=Delete Account(s)
+pageContentAccounts.menu.enableAccounts=Enable Account(s)
 pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
+pageContentAccounts.dialog.title.confirmDelete=Delete Confirmation
