--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -28,13 +28,10 @@ pageContentAccounts.message.noAccountSelected=No accounts has been selected.
 pageContentAccounts.message.deleteConfirmation=Do you really want to delete {0} account(s) from this resource?
 pageContentAccounts.message.deleteConfirmationSingle=Do you really want to delete '{0}' account from this resource?
 pageContentAccounts.menu.changeOwner=Change owner
-pageContentAccounts.menu.importAccount=Import Account(s)
+pageContentAccounts.menu.importAccount=Import
 pageContentAccounts.menu.removeOwner=Remove owner
-pageContentAccounts.menu.disableAccount=Disable Account
-pageContentAccounts.menu.deleteAccount=Delete Account
-pageContentAccounts.menu.enableAccount=Enable Account
-pageContentAccounts.menu.disableAccounts=Disable Account(s)
-pageContentAccounts.menu.deleteAccounts=Delete Account(s)
-pageContentAccounts.menu.enableAccounts=Enable Account(s)
+pageContentAccounts.menu.disableAccount=Disable
+pageContentAccounts.menu.deleteAccount=Delete
+pageContentAccounts.menu.enableAccount=Enable
 pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
 pageContentAccounts.dialog.title.confirmDelete=Delete Confirmation
