--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -46,6 +46,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.apache.santuario</groupId>
+			<artifactId>xmlsec</artifactId>
+			<version>1.4.5</version>
+		</dependency>
 <!--         <dependency> -->
 <!-- 	<groupId>org.codehaus.jackson</groupId> -->
 <!-- 	<artifactId>jackson-core-asl</artifactId> -->
