dryRun option on task add/edit page (for all tasks). MID-1468

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskAdd.properties
@@ -44,6 +44,8 @@ pageTask.category.Workflow=Workflow
 pageTask.cronHelpLink=For more information, please see
 pageTask.cronHelpLinkTutorial=tutorial
 pageTask.basic=Basic
+pageTask.options=Options
+pageTask.dryRun=Dry run
 
 pageTask.scheduleHelp=For one-time tasks, enter neither schedule interval nor cron-like specification. \
   For recurring tasks, enter exactly one of these.
