--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -72,6 +72,8 @@ pageTaskEdit.opResult.token=Token
 pageTaskEdit.opResult.operation=Operation
 pageTaskEdit.opResult.status=Status
 pageTaskEdit.opResult.message=Message
+pageTaskEdit.options=Options
+pageTaskEdit.dryRun=Dry run
 
 runUntilNodeDown.error1=Compatible data for 'Thread stop action' are: Close, Suspend
 runUntilNodeDown.error2=Compatible data for 'Thread stop action' are: Restart, Reschedule
