MID-1735 - deletion bug fixed.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -35,5 +35,6 @@ pageUsers.menu.disable=Disable
 pageUsers.menu.enable=Enable
 pageUsers.message.nothingSelected=No user has been selected.
 pageUsers.message.deleteUserConfirm=Do you really want to delete selected {0} user(s)?
+pageUsers.message.deleteUserConfirmSingle=Do you really want to delete user '{0}'?
 pageUsers.dialog.title.confirmDelete=Confirm delete
 pageUsers.accounts=Accounts
