--- a/infra/prism/src/test/resources/common/yaml/user-jack.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack.yaml
@@ -1,6 +1,6 @@
 ---
-user:
-  '@ns': "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd"
+'@ns': "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd"
+user: 
   oid: "c0c010c0-d34d-b33f-f00d-111111111111"
   version: "42"
   name: "jack"
@@ -12,28 +12,13 @@ user:
     - "alpha"
     - "bravo"
     bar:
-    - '@typeDef':
-        '@namespace': "http://www.w3.org/2001/XMLSchema"
-        '@localPart': "string"
-      '@value': "BAR"
+    - !http://www.w3.org/2001/XMLSchema/string "BAR"
     num:
-    - '@typeDef':
-        '@namespace': "http://www.w3.org/2001/XMLSchema"
-        '@localPart': "int"
-      '@value': 42
+    - !http://www.w3.org/2001/XMLSchema/int 42
     multi:
-    - '@typeDef':
-        '@namespace': "http://www.w3.org/2001/XMLSchema"
-        '@localPart': "string"
-      '@value': "raz"
-    - '@typeDef':
-        '@namespace': "http://www.w3.org/2001/XMLSchema"
-        '@localPart': "string"
-      '@value': "dva"
-    - '@typeDef':
-        '@namespace': "http://www.w3.org/2001/XMLSchema"
-        '@localPart': "string"
-      '@value': "tri"
+    - !http://www.w3.org/2001/XMLSchema/string "raz"
+    - !http://www.w3.org/2001/XMLSchema/string "dva"
+    - !http://www.w3.org/2001/XMLSchema/string "tri"
   fullName: "cpt. Jack Sparrow"
   givenName: "Jack"
   familyName: "Sparrow"
@@ -47,31 +32,35 @@ user:
   - id: 1112
     description: "Assignment 2"
     accountConstruction:
-      '@ns': "##default"
       howto: "Just do it"
       when: 1330080532000
   activation:
     enabled: true
     validFrom: 170717400000
+  password:
+    '@ns': "http://prism.evolveum.com/xml/ns/public/types-2"
+    encryptedData:
+      encryptionMethod:
+        algorithm: "http://www.w3.org/2001/04/xmlenc#aes256-cbc"
+      keyInfo:
+        keyName: "HF6JRsNMeJt6alihT44CXKgpe0c="
+      cipherData:
+        cipherValue: "blc5OXO2Z4vJW7o/XXhqZzg/rkwsIOwRBK7KLgMqwcrVcYpeZZOjxzgRgFiNw4IB"
   accountRef:
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1113"
-    type:
-      '@namespace': "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd"
-      '@localPart': "AccountType"
+    type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
     object:
       oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1113"
       name: "jsparrow"
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1111"
-    type:
-      '@namespace': "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd"
-      '@localPart': "AccountType"
+    type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
   - oid: "c0c010c0-d34d-b33f-f00d-aaaaaaaa1112"
-    type:
-      '@namespace': "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd"
-      '@localPart': "AccountType"
+    type: "http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd#AccountType"
     description: "This is a reference with a filter"
     filter:
+      '@ns' : "http://prism.evolveum.com/xml/ns/public/query-2"
       equal:
+        '@ns' : "http://prism.evolveum.com/xml/ns/public/query-2"
         path: "declare namespace c='http://midpoint.evolveum.com/xml/ns/test/foo-1.xsd'; c:name"
         value:
         - "captain"
