--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -428,6 +428,16 @@ operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.loadLog
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageLogging.updateLoggingConfiguration=Update logging configuration (Gui)
 operation.com.evolveum.midpoint.web.page.admin.configuration.PageTimeTest.changeTime=Change time (Gui)
 
+LoggingComponentType.ALL=All
+LoggingComponentType.MODEL=Model logger
+LoggingComponentType.PROVISIONING=Provisioning logger
+LoggingComponentType.REPOSITORY=Repository logger
+LoggingComponentType.GUI=Web logger
+LoggingComponentType.TASKMANAGER=Task manager logger
+LoggingComponentType.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
+LoggingComponentType.WORKFLOWS = Workflow logger
+LoggingComponentType.NOTIFICATIONS = Notification logger
+
 #------- Page Home ----------------#
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadUser=Load user (Gui)
 operation.com.evolveum.midpoint.web.page.admin.home.PageDashboard.loadAccounts=Load accounts (Gui)
