report manager now uses simple read hook to apply schema for report type. prepared for gui integration.

--- a/model/report-impl/pom.xml
+++ b/model/report-impl/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>model-api</artifactId>
 			<version>2.3-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.repo</groupId>
+            <artifactId>repo-api</artifactId>
+            <version>2.3-SNAPSHOT</version>
+        </dependency>
 
  		<!-- Jasper reports -->
         <dependency>
