--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.properties
@@ -15,3 +15,4 @@
 #
 UploadPanel.message.help=Choose Xml file for import.
 UploadPanel.upload.tooltip=Upload Photo
+UploadPanel.delete.tooltip=Remove Photo
