--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReport.properties
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-pageReport.title=Edit report
+pageReport.title=Report configuration
 
-pageReport.tab.aceEditor=XML report configuration
-pageReport.tab.panelConfig=Wizard report configuration
+pageReport.tab.aceEditor=Xml
+pageReport.tab.panelConfig=Basic configuration
 pageReport.message.emptyXml=Can't save empty XML as report.
 pageReport.message.editWarning=For report editing, please use XML tab. Editing via forms will be available soon.
