--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/DefaultReportPanel.properties
@@ -13,5 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-defaultReportPanel.title.basic=Basic Report Configuration
-defaultReportPanel.exportType.label=Export Type
+defaultReportPanel.title.basic=Basic
+defaultReportPanel.title.properties=Properties
+defaultReportPanel.exportType.label=Export
