report configuration, first impl.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -193,6 +193,10 @@ FocusType.activation=Activation
 UserType.fullName=Full name
 UserType.givenName=Given name
 UserType.familyName=Family name
+ReportType.export=Export
+ReportType.useHibernateSession=Use hibernate session
+ReportType.orientation=Orientation
+ReportType.parent=Parent
 
 ActivationType.title=Activation
 ActivationType.enabled=Enabled
