--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReportConfigurationPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReportConfigurationPanel.properties
@@ -13,6 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-defaultReportPanel.title.basic=Basic
-defaultReportPanel.title.properties=Properties
-defaultReportPanel.exportType.label=Export
+ReportConfigurationPanel.title.basic=Basic
