--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -24,6 +24,7 @@ LoggingConfigPanel.details=Details
 LoggingConfigPanel.appender=Appender
 LoggingConfigPanel.button.save=Save
 LoggingConfigPanel.button.reset=Reset
+LoggingConfigPanel.button.addStandardLogger=Add standard logger
 LoggingConfigPanel.button.addClassLogger=Add logger
 LoggingConfigPanel.button.addComponentLogger=Add component logger
 LoggingConfigPanel.button.deleteLogger=Delete logger
@@ -62,6 +63,13 @@ LoggingConfigPanel.profiling.dumpInterval=Dump interval
 LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
 LoggingConfigPanel.profiling.entryExit=Profiling entry/exit
 
+StandardLoggerType.MAPPING=Mapping logger
+StandardLoggerType.EXPRESSION=Expression logger
+StandardLoggerType.SCRIPT_EXPRESSION=Script expression logger
+StandardLoggerType.PROJECTOR=Projector logger
+StandardLoggerType.PROJECTOR_DETAIL=Projector detailed logger
+StandardLoggerType.CLOCKWORK=Clockwork logger
+StandardLoggerType.CHANGE_EXECUTOR=Change executor logger
 
 logger.emptyLogger=Logger must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
