--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -63,13 +63,13 @@ LoggingConfigPanel.profiling.dumpInterval=Dump interval
 LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
 LoggingConfigPanel.profiling.entryExit=Profiling entry/exit
 
-StandardLoggerType.MAPPING=Mapping logger
-StandardLoggerType.EXPRESSION=Expression logger
-StandardLoggerType.SCRIPT_EXPRESSION=Script expression logger
-StandardLoggerType.PROJECTOR=Projector logger
-StandardLoggerType.PROJECTOR_DETAIL=Projector detailed logger
-StandardLoggerType.CLOCKWORK=Clockwork logger
-StandardLoggerType.CHANGE_EXECUTOR=Change executor logger
+StandardLoggerType.MAPPING=Mapping
+StandardLoggerType.EXPRESSION=Expression
+StandardLoggerType.SCRIPT_EXPRESSION=Script expression
+StandardLoggerType.PROJECTOR=Projector
+StandardLoggerType.PROJECTOR_DETAIL=Projector detailed
+StandardLoggerType.CLOCKWORK=Clockwork
+StandardLoggerType.CHANGE_EXECUTOR=Change executor
 
 logger.emptyLogger=Logger must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
