minor localization update for MID-1741

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel.properties
@@ -63,13 +63,13 @@ LoggingConfigPanel.profiling.dumpInterval=Dump interval
 LoggingConfigPanel.profiling.dumpInterval.placeholder=Dump interval
 LoggingConfigPanel.profiling.entryExit=Profiling entry/exit
 
-StandardLoggerType.MAPPING=Mapping
-StandardLoggerType.EXPRESSION=Expression
-StandardLoggerType.SCRIPT_EXPRESSION=Script expression
-StandardLoggerType.PROJECTOR=Projector
-StandardLoggerType.PROJECTOR_DETAIL=Projector detailed
-StandardLoggerType.CLOCKWORK=Clockwork
-StandardLoggerType.CHANGE_EXECUTOR=Change executor
+StandardLoggerType.MAPPING=Mapping (c.e.m.common.mapping.Mapping)
+StandardLoggerType.EXPRESSION=Expression (c.e.m.common.expression.Expression)
+StandardLoggerType.SCRIPT_EXPRESSION=Script expression (c.e.m.common.expression.script.ScriptExpression)
+StandardLoggerType.PROJECTOR=Projector (c.e.m.model.lens.projector.Projector)
+StandardLoggerType.PROJECTOR_DETAIL=Projector detailed (c.e.m.model.lens.projector)
+StandardLoggerType.CLOCKWORK=Clockwork (c.e.m.model.lens.Clockwork)
+StandardLoggerType.CHANGE_EXECUTOR=Change executor (c.e.m.model.lens.ChangeExecutor)
 
 logger.emptyLogger=Logger must not be empty
 logger.duplicate=Logger with name '{0}' is already defined
