updated localization files

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Fri Jan 10 12:26:48 CET 2014
+#Wed Feb 12 15:42:50 CET 2014
 ActivationStatusType.ARCHIVED=Archived
 ActivationStatusType.DISABLED=Disabled
 ActivationStatusType.ENABLED=Enabled
@@ -30,8 +30,31 @@ Boolean.FALSE=False
 Boolean.NULL=Undefined
 Boolean.TRUE=True
 DateValidator.message.fromAfterTo=Valid from date must be before valid to date.
+ExportType.CSV=CSV
+ExportType.DOCX=DOCX
+ExportType.HTML=HTML
+ExportType.JXL=JXL
+ExportType.ODS=ODS
+ExportType.ODT=ODT
+ExportType.PDF=PDF
+ExportType.PPTX=PPTX
+ExportType.RTF=RTF
+ExportType.XHTML=XHTML
+ExportType.XLS=XLS
+ExportType.XLSX=XLSX
+ExportType.XML=XML
+ExportType.XML_EMBED=XML_EMBED
 FocusType.activation=Activation
 HoursValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
+LoggingComponentType.ALL=All
+LoggingComponentType.GUI=Web logger
+LoggingComponentType.MODEL=Model logger
+LoggingComponentType.NOTIFICATIONS=Notification logger
+LoggingComponentType.PROVISIONING=Provisioning logger
+LoggingComponentType.REPOSITORY=Repository logger
+LoggingComponentType.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
+LoggingComponentType.TASKMANAGER=Task manager logger
+LoggingComponentType.WORKFLOWS=Workflow logger
 LoggingLevelType.ALL=All
 LoggingLevelType.DEBUG=Debug
 LoggingLevelType.ERROR=Error
@@ -96,6 +119,10 @@ OriginType.USER_ACTION=User action
 OriginType.USER_POLICY=User policy
 OriginType.null=-
 RangeValidator.range=Field '${label}' have to be between ${minimum} and ${maximum}.
+ReportType.export=Export
+ReportType.orientation=Orientation
+ReportType.parent=Parent
+ReportType.useHibernateSession=Use hibernate session
 ResourceStatus.DOWN=Down
 ResourceStatus.ERROR=Error
 ResourceStatus.NOT_TESTED=Not tested
@@ -132,6 +159,9 @@ ThreadStopActionType.CLOSE=Close
 ThreadStopActionType.RESCHEDULE=Reschedule
 ThreadStopActionType.RESTART=Restart
 ThreadStopActionType.SUSPEND=Suspend
+UserType.familyName=Family name
+UserType.fullName=Full name
+UserType.givenName=Given name
 WebModelUtils.couldntLoadObject=Couldn't load object.
 com.evolveum.midpoint.notifications.api.transports.MailTransport.send=Send mail (Notifications)
 com.evolveum.midpoint.notifications.api.transports.SimpleSmsTransport.send=Send SMS (Notifications)
