--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Oct 12 17:23:53 CEST 2013
+#Wed Feb 12 15:40:22 CET 2014
 ItemApprovalPanel.approvalSchema=Approval schema
 ItemApprovalPanel.currentWorkItems=Current work items
 ItemApprovalPanel.decisionsDoneWhenFinishedIs_false=Decisions done so far
