--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel_sk_SK.utf8.properties
@@ -1,3 +1,6 @@
-#Fri Jun 07 12:44:19 CEST 2013
+#Wed Feb 12 15:40:22 CET 2014
+AuditPopulPanel.exportType.label=Export File Type
+AuditPopupPanel.auditEventType=Event Type
 AuditPopupPanel.dateFrom=From
 AuditPopupPanel.dateTo=To
+AuditPopupPanel.title=Audit Report Basic Configuration
