--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/roles/PageRoles_sk_SK.utf8.properties
@@ -1,24 +1,13 @@
-#
-# Copyright (c) 2010-2013 Evolveum
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-#Wed Jun 06 18:36:11 CEST 2012
-page.title=Zoznam rol\u00ED
-pageRoles.button.delete=Zmaza\u0165
+#Wed Feb 12 15:40:22 CET 2014
+page.title=Zoznam rolí
+pageRoles.button.delete=Zmazať
+pageRoles.button.search=Search
 pageRoles.description=Popis
 pageRoles.dialog.title.confirmDelete=Potvrdenie zmazania
-pageRoles.message.deleteRoleConfirm=Naozaj chcete zmaza\u0165 {0} vybran\u00E9 role?
-pageRoles.message.nothingSelected=Nebola vybrat\u00E1 rola.
+pageRoles.message.deleteRoleConfirm=Naozaj chcete zmazať {0} vybrané role?
+pageRoles.message.nothingSelected=Nebola vybratá rola.
+pageRoles.message.queryError=Error occurred during translation search query to filter.
 pageRoles.name=Meno
+pageRoles.nonRequestable=Non Requestable
+pageRoles.requestable=Requestable
+pageRoles.requestableAll=All
