--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/LoggingConfigPanel_sk_SK.utf8.properties
@@ -1,6 +1,7 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Wed Feb 12 15:40:22 CET 2014
 LoggingConfigPanel.appender=Appender\:
 LoggingConfigPanel.appenders=Appenders
+LoggingConfigPanel.appenders.Inherit=Inherited
 LoggingConfigPanel.appenders.appending=Appending
 LoggingConfigPanel.appenders.filePath=File path
 LoggingConfigPanel.appenders.filePattern=File pattern
@@ -14,19 +15,13 @@ LoggingConfigPanel.button.addClassLogger=Add logger
 LoggingConfigPanel.button.addComponentLogger=Add component logger
 LoggingConfigPanel.button.addConsoleAppender=Add console appender
 LoggingConfigPanel.button.addFileAppender=Add file appender
+LoggingConfigPanel.button.addStandardLogger=Add standard logger
 LoggingConfigPanel.button.deleteAppender=Delete appender
 LoggingConfigPanel.button.deleteLogger=Delete logger
 LoggingConfigPanel.button.reset=Reset
 LoggingConfigPanel.button.save=Save
 LoggingConfigPanel.details=Details\:
 LoggingConfigPanel.logger=Logger
-LoggingConfigPanel.logger.ALL=All
-LoggingConfigPanel.logger.GUI=Web logger
-LoggingConfigPanel.logger.MODEL=Model logger
-LoggingConfigPanel.logger.PROVISIONING=Provisioning logger
-LoggingConfigPanel.logger.REPOSITORY=Repository logger
-LoggingConfigPanel.logger.RESOURCEOBJECTCHANGELISTENER=Resource object change listener logger
-LoggingConfigPanel.logger.TASKMANAGER=Task manager logger
 LoggingConfigPanel.loggers=Loggers
 LoggingConfigPanel.loggersAppender=Appender
 LoggingConfigPanel.loggersLevel=Level
@@ -51,6 +46,13 @@ LoggingConfigPanel.subsystem.level=Level
 ProfilingLevel.ARGUMENTS=Arguments
 ProfilingLevel.ENTRY_EXIT=Entry/Exit
 ProfilingLevel.OFF=Off
+StandardLoggerType.CHANGE_EXECUTOR=Change executor (c.e.m.model.lens.ChangeExecutor)
+StandardLoggerType.CLOCKWORK=Clockwork (c.e.m.model.lens.Clockwork)
+StandardLoggerType.EXPRESSION=Expression (c.e.m.common.expression.Expression)
+StandardLoggerType.MAPPING=Mapping (c.e.m.common.mapping.Mapping)
+StandardLoggerType.PROJECTOR=Projector (c.e.m.model.lens.projector.Projector)
+StandardLoggerType.PROJECTOR_DETAIL=Projector detailed (c.e.m.model.lens.projector)
+StandardLoggerType.SCRIPT_EXPRESSION=Script expression (c.e.m.common.expression.script.ScriptExpression)
 logger.duplicate=Logger with name '{0}' is already defined
 logger.emptyLogger=Logger must not be empty
 message.emptyLevel=Level must not be empty
