--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel_sk_SK.utf8.properties
@@ -1,4 +1,4 @@
-#Mon Dec 09 19:46:55 CET 2013
+#Wed Feb 12 15:40:22 CET 2014
 SystemConfigPanel.assignmentPolicyEnforcement=Assignment policy enforcement
 SystemConfigPanel.cleanupPolicy=Cleanup Policy
 SystemConfigPanel.cleanupPolicy.auditRecords=Audit records cleanup interval
@@ -11,6 +11,7 @@ SystemConfigPanel.mail.password=Password
 SystemConfigPanel.mail.port=Port
 SystemConfigPanel.mail.transportSecurity=Transport security
 SystemConfigPanel.mail.username=Username
+SystemConfigPanel.notification.redirectToFile=Redirect to file
 SystemConfigPanel.title.accountSynchronization=Global account synchronization settings
 SystemConfigPanel.title.basic=Basic
 SystemConfigPanel.title.connectorFramework=Connector frameworks configuration
@@ -18,3 +19,4 @@ SystemConfigPanel.title.modelHooks=Model hooks
 SystemConfigPanel.title.notification=Notifications
 SystemConfigPanel.title.passwordPolicy=Global password policy
 SystemConfigPanel.title.userTemplate=Default user template
+SystemConfigPanel.tooltip.duration=Format\: P[n][p], n-number, p-period (d - days, m - months, ...), P3M - cleanup every 3 months
