--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel_sk_SK.utf8.properties
@@ -1,2 +1,4 @@
-#Thu May 30 10:05:25 CEST 2013
+#Wed Feb 12 15:40:22 CET 2014
+ReconciliationPopupPanel.exportFileType=Export Type
 ReconciliationPopupPanel.resource=Resource
+ReconciliationPopupPanel.title.basic=Basic Reconciliation Report Configuration
