--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -318,6 +318,39 @@
             <artifactId>wicket-datetime</artifactId>
         </dependency>
 
+        <!-- Xtext DSL
+        <dependency>
+            <groupId>com.evolveum.midpoint.msl</groupId>
+            <artifactId>com.evolveum.midpoint.msl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib</artifactId>
+            <version>2.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.dependencies</artifactId>
+            <version>2.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.xbase</artifactId>
+            <version>2.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext</artifactId>
+            <version>2.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        -->
+
         <!-- TEST -->
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
