--- a/infra/prism/pom.xml
+++ b/infra/prism/pom.xml
@@ -56,7 +56,29 @@
 	<artifactId>jackson-mapper-asl</artifactId>
 	<version>1.9.13</version>
 </dependency>
-            
+
+        <!-- Xtext
+        <dependency>
+            <groupId>com.evolveum.midpoint.msl</groupId>
+            <artifactId>com.evolveum.midpoint.msl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtend</groupId>
+            <artifactId>org.eclipse.xtend.lib</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.dependencies</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        -->
         <!-- TEST -->
         <dependency>
             <groupId>org.testng</groupId>
