--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -117,6 +117,26 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.evolveum.midpoint.msl</groupId>-->
+            <!--<artifactId>com.evolveum.midpoint.msl</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.xtend</groupId>-->
+            <!--<artifactId>org.eclipse.xtend.lib</artifactId>-->
+            <!--<version>2.5.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.xtext</groupId>-->
+            <!--<artifactId>org.eclipse.xtext.dependencies</artifactId>-->
+            <!--<version>2.5.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.xtext</groupId>-->
+            <!--<artifactId>org.eclipse.xtext</artifactId>-->
+            <!--<version>2.5.1</version>-->
+        <!--</dependency>-->
 
         <!-- Test -->
      	<dependency>
