MID-1744 - report download implementation

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -31,6 +31,7 @@ pageCreatedReports.message.deleteOutputConfirmed=Do you really want to delete se
 pageCreatedReports.message.deleteOutputSingle=Do you really want to delete Created report '{0}'?
 pageCreatedReports.message.deleteAll=Do you really want to delete all created report outputs?
 pageCreatedReports.message.queryError=Error occurred during translation search query to filter.
+pageCreatedReports.message.downloadError=Could not download Report.
 
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
