MID-1744 - search on ReportsPage implementation

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -35,6 +35,10 @@ PageReports.title.reconciliationPopup=Reconciliation report parameters
 PageReports.title.userPopup=User report parameters
 
 PageReports.message.resourceNotDefined=Resource not defined.
+PageReports.message.queryError=Error occurred during translation search query to filter.
 
 PageReports.button.run=Run
 PageReports.button.configure=Configure
+
+searchForm.searchTextPlaceholder=Text
+PageReports.search.showSubreports=Show Sub-reports
