minor translation fix, search update html on reports page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageReports.properties
@@ -41,4 +41,4 @@ PageReports.button.run=Run
 PageReports.button.configure=Configure
 
 searchForm.searchTextPlaceholder=Text
-PageReports.search.showSubreports=Show Sub-reports
+PageReports.search.showSubreports=Show subreports
