updated localization for upload panel.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/UploadPanel.properties
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-UploadPanel.message.help=Choose Xml file for import.
-UploadPanel.upload.tooltip=Upload Photo
-UploadPanel.delete.tooltip=Remove Photo
+UploadPanel.message.help=Choose file for import.
+UploadPanel.upload.tooltip=Upload file
+UploadPanel.delete.tooltip=Remove file
+UploadPanel.message.uploadSuccess=File upload was successful. Continue with editing and press 'Save' when done.
+UploadPanel.message.uploadError=File upload failed. Try again please.
+UploadPanel.message.removeSuccess=File was removed.
+UploadPanel.message.removeError=File was not removed.
