schema list in wizard, attribute and object class details design added. not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
@@ -16,3 +16,5 @@
 
 SchemaListPanel.objectClass=Object class
 SchemaListPanel.message.couldntParseSchema=Couldn't parse resource schema
+SchemaListPanel.details=Details
+SchemaListPanel.attributes=Attributes
