--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -65,23 +65,23 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--<filter>-->
-        <!--<filter-name>wicket</filter-name>-->
-        <!--<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>configuration</param-name>-->
-              <!--<param-value>development</param-value>-->
-            <!--&lt;!&ndash;<param-value>deployment</param-value>&ndash;&gt;-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>applicationBean</param-name>-->
-            <!--<param-value>midpointApplication</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>applicationFactoryClassName</param-name>-->
-            <!--<param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>-->
-        <!--</init-param>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>wicket</filter-name>
+        <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+        <init-param>
+            <param-name>configuration</param-name>
+              <param-value>development</param-value>
+            <!--<param-value>deployment</param-value>-->
+        </init-param>
+        <init-param>
+            <param-name>applicationBean</param-name>
+            <param-value>midpointApplication</param-value>
+        </init-param>
+        <init-param>
+            <param-name>applicationFactoryClassName</param-name>
+            <param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
+        </init-param>
+    </filter>
 
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
@@ -102,61 +102,61 @@
         <url-pattern>/wro/*</url-pattern>
     </filter-mapping>
 
-    <!--<filter-mapping>-->
-        <!--<filter-name>wicket</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-        <!--<dispatcher>REQUEST</dispatcher>-->
-        <!--<dispatcher>ERROR</dispatcher>-->
-    <!--</filter-mapping>-->
-
-    <servlet>
-        <description>Atmospherefilter</description>
-        <servlet-name>Atmospherefilter</servlet-name>
-        <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
-        <init-param>
-            <param-name>configuration</param-name>
-            <param-value>development</param-value>
-            <!--<param-value>deployment</param-value>-->
-        </init-param>
-        <init-param>
-            <param-name>applicationBean</param-name>
-            <param-value>midpointApplication</param-value>
-        </init-param>
-        <init-param>
-            <param-name>applicationFactoryClassName</param-name>
-            <param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.useWebSocket</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.useNative</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.cpr.sessionSupport</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>filterMappingUrlPattern</param-name>
-            <param-value>/*</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.websocket.WebSocketProtocol</param-name>
-            <param-value>org.atmosphere.websocket.protocol.EchoProtocol</param-value>
-        </init-param>
-        <init-param>
-            <param-name>org.atmosphere.cpr.broadcastFilterClasses</param-name>
-            <param-value>org.apache.wicket.atmosphere.TrackMessageSizeFilter</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-        <!--<async-supported>true</async-supported> supported in servlet 3.0 (tomcat 7) -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Atmospherefilter</servlet-name>
+    <filter-mapping>
+        <filter-name>wicket</filter-name>
         <url-pattern>/*</url-pattern>
-    </servlet-mapping>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping>
+
+    <!--<servlet>-->
+        <!--<description>Atmospherefilter</description>-->
+        <!--<servlet-name>Atmospherefilter</servlet-name>-->
+        <!--<servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>-->
+        <!--<init-param>-->
+            <!--<param-name>configuration</param-name>-->
+            <!--<param-value>development</param-value>-->
+            <!--&lt;!&ndash;<param-value>deployment</param-value>&ndash;&gt;-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>applicationBean</param-name>-->
+            <!--<param-value>midpointApplication</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>applicationFactoryClassName</param-name>-->
+            <!--<param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.useWebSocket</param-name>-->
+            <!--<param-value>true</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.useNative</param-name>-->
+            <!--<param-value>true</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.cpr.sessionSupport</param-name>-->
+            <!--<param-value>true</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>filterMappingUrlPattern</param-name>-->
+            <!--<param-value>/*</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.websocket.WebSocketProtocol</param-name>-->
+            <!--<param-value>org.atmosphere.websocket.protocol.EchoProtocol</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.cpr.broadcastFilterClasses</param-name>-->
+            <!--<param-value>org.apache.wicket.atmosphere.TrackMessageSizeFilter</param-value>-->
+        <!--</init-param>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+        <!--&lt;!&ndash;<async-supported>true</async-supported> supported in servlet 3.0 (tomcat 7) &ndash;&gt;-->
+    <!--</servlet>-->
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>Atmospherefilter</servlet-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</servlet-mapping>-->
 
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
