schema step panel.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
@@ -18,3 +18,9 @@ SchemaListPanel.objectClass=Object class
 SchemaListPanel.message.couldntParseSchema=Couldn't parse resource schema
 SchemaListPanel.details=Details
 SchemaListPanel.attributes=Attributes
+SchemaListPanel.name=Name
+SchemaListPanel.minMax=Min/max occurs
+SchemaListPanel.displayName=Display name
+SchemaListPanel.displayOrder=Order
+SchemaListPanel.returnedByDefault=Returned by default
+SchemaListPanel.nativeAttributeName=Native attribute name
