Code cleanup in report UI. Several minor fixes and improvements. Handling situation when report .pdf file is physically missing etc.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/PageCreatedReports.properties
@@ -32,6 +32,7 @@ pageCreatedReports.message.deleteOutputSingle=Do you really want to delete Creat
 pageCreatedReports.message.deleteAll=Do you really want to delete all created report outputs?
 pageCreatedReports.message.queryError=Error occurred during translation search query to filter.
 pageCreatedReports.message.downloadError=Could not download Report.
+pageCreatedReports.message.fileNotFound=File with report was not found.
 
 pageCreatedReports.filter.filetype=File Type
 pageCreatedReports.filter.reportType=Report Type
