updated search on user list page.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/BasicSearchPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/BasicSearchPanel.properties
@@ -16,4 +16,4 @@
 
 BasicSearchPanel.search=Search
 BasicSearchPanel.clear=Clear search
-BasicSearchPanel.textPlaceholder=Search name
+BasicSearchPanel.textPlaceholder=Search text
