--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -193,6 +193,7 @@ FocusType.activation=Activation
 UserType.fullName=Full name
 UserType.givenName=Given name
 UserType.familyName=Family name
+UserType.emailAddress=Email
 ReportType.export=Export
 ReportType.useHibernateSession=Use hibernate session
 ReportType.orientation=Orientation
