updated search on role list page, minor localization fixes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRoles.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRoles.properties
@@ -15,13 +15,11 @@
 #
 
 page.title=List roles
-pageRoles.name=Name
-pageRoles.requestableAll=All
-pageRoles.nonRequestable=Non Requestable
+Requestable.ALL=All
+Requestable.REQUESTABLE=Requestable
+Requestable.NON_REQUESTABLE=Non-Requestable
 pageRoles.requestable=Requestable
-pageRoles.description=Description
 pageRoles.button.delete=Delete
-pageRoles.button.search=Search
 pageRoles.message.deleteRoleConfirm=Do you really want to delete selected {0} role(s)?
 pageRoles.message.nothingSelected=No role has been selected.
 pageRoles.message.queryError=Error occurred during translation search query to filter.
