org. tree page features. MID-1152

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -491,6 +491,8 @@ operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.mo
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.moveObject=Move object (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObjects=Delete objects (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.deleteObject=Delete object (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.updateObjects=Update objects (Gui)
+operation.com.evolveum.midpoint.web.page.admin.users.component.TreeTablePanel.updateObject=Update object (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.loadObject=Load object (Gui)
 operation.com.evolveum.midpoint.web.util.WebModelUtils.deleteObject=Delete object (Gui)
 operation.com.evolveum.midpoint.web.page.admin.users.PageOrgUnit.saveOrgUnit=Save org. unit (Gui)
