--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -21,10 +21,13 @@ TreeTablePanel.menu.delete=Delete
 TreeTablePanel.menu.removeFromHierarchy=Remove from org. unit
 TreeTablePanel.menu.addToHierarchy=Add to org. unit
 TreeTablePanel.menu.move=Move
+TreeTablePanel.menu.enable=Enable
+TreeTablePanel.menu.disable=Disable
 TreeTablePanel.message.nothingSelected=No object has been selected.
 TreeTablePanel.message.deleteObjectConfirm=Do you really want to delete selected {0} object(s)?
+TreeTablePanel.message.deleteRootConfirm=Do you really want to delete {0} ({1})?
 TreeTablePanel.dialog.title.confirmDelete=Confirm delete
-TreeTablePanel.menu.actionOnSelection=Action on selection
 TreeTablePanel.collapseAll=Collapse all
 TreeTablePanel.expandAll=Expand all
 TreeTablePanel.moveRoot=Move root
+TreeTablePanel.deleteRoot=Delete root
