Fixed displaying status of nodes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -147,6 +147,12 @@ NodeExecutionStatus.DOWN=Turned off
 NodeExecutionStatus.ERROR=Error
 NodeExecutionStatus.COMMUNICATION_ERROR=Unreachable
 
+NodeExecutionStatusType.RUNNING=Running
+NodeExecutionStatusType.PAUSED=Stopped
+NodeExecutionStatusType.DOWN=Turned off
+NodeExecutionStatusType.ERROR=Error
+NodeExecutionStatusType.COMMUNICATION_ERROR=Unreachable
+
 ResourceStatus.NOT_TESTED=Not tested
 ResourceStatus.ERROR=Error
 ResourceStatus.SUCCESS=Success
