Work on issues from MID-1724. Fixed issues 1,3,4. Work on issue 7 in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/OrgUnitBrowser.properties
@@ -18,3 +18,4 @@ OrgUnitBrowser.title=Choose new org. unit parent
 OrgUnitBrowser.search=Search
 OrgUnitBrowser.cancel=Cancel
 OrgUnitBrowser.createRoot=Make it root
+OrgUnitBrowser.message.queryError=Error occurred during translation search query to filter.
