MID-1767 - Role Editor implementation iteration - added editors for assignments and inducements. Still many bugs and TODOs. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -17,7 +17,11 @@ PageRoleEditor.subtitle.basic=Basic
 PageRoleEditor.subtitle.activation=Activation
 PageRoleEditor.title.newRole=Create New Role
 PageRoleEditor.title.editingRole=Role '{0}' details
+PageRoleEditor.title.inducements=Inducements
+PageRoleEditor.title.assignments=Assignments
 PageRoleEditor.label.name=Name
 PageRoleEditor.label.description=Description
 PageRoleEditor.label.type=Type
 PageRoleEditor.label.requestable=Requestable
+
+
