--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2010-2013 Evolveum
+  ~ Copyright (c) 2010-2014 Evolveum
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>idm</display-name>
+    <display-name>midPoint</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -38,7 +38,7 @@
             classpath*:ctx-notifications.xml,
             classpath:ctx-camel-imports.xml,
             /WEB-INF/ctx-webapp.xml,
-            /WEB-INF/ctx-security.xml,
+            /WEB-INF/ctx-web-security.xml,
             /WEB-INF/ctx-init.xml
         </param-value>
     </context-param>
