--- a/tools/repo-ninja/pom.xml
+++ b/tools/repo-ninja/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>system-init</artifactId>
             <version>2.3-SNAPSHOT</version>
         </dependency>
+         <dependency>
+            <groupId>com.evolveum.midpoint.repo</groupId>
+            <artifactId>security-impl</artifactId>
+            <version>2.3-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
