--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentTablePanel.properties
@@ -19,3 +19,9 @@ AssignmentTablePanel.menu.assignOrg=Assign Org.
 AssignmentTablePanel.menu.unassign=Unassign
 
 AssignmentTablePanel.modal.title.selectAssignment=Select object(s)
+AssignmentTablePanel.modal.title.confirmDeletion=Confirm deletion
+AssignmentTablePanel.modal.message.delete=Do you really want to delete {0} assignment(s)?
+
+AssignmentTablePanel.message.noAssignmentSelected=No assignment selected.
+AssignmentTablePanel.message.couldntAssignObject=Couldn't assign object '{0}', reason: {1}.
+AssignmentTablePanel.message.illegalAssignmentState=Illegal assignment state '{0}'.
