--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -18,6 +18,7 @@ TreeTablePanel.hierarchy=Org. hierarchy
 TreeTablePanel.menu.addOrgUnit=Add org. unit
 TreeTablePanel.menu.addUser=Add user
 TreeTablePanel.menu.delete=Delete
+TreeTablePanel,menu.recompute=Recompute
 TreeTablePanel.menu.removeFromHierarchy=Remove from org. unit
 TreeTablePanel.menu.addToHierarchy=Add to org. unit
 TreeTablePanel.menu.move=Move
@@ -31,3 +32,5 @@ TreeTablePanel.collapseAll=Collapse all
 TreeTablePanel.expandAll=Expand all
 TreeTablePanel.moveRoot=Move root
 TreeTablePanel.deleteRoot=Delete root
+TreeTablePanel.recomputeRoot=Recompute root
+TreeTablePanel.message.recomputeError=Can't recompute Org. unit
