Adding option to edit root org. unit from PageOrgTree that was not possible before.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -33,4 +33,5 @@ TreeTablePanel.expandAll=Expand all
 TreeTablePanel.moveRoot=Move root
 TreeTablePanel.deleteRoot=Delete root
 TreeTablePanel.recomputeRoot=Recompute root
+TreeTablePanel.editRoot=Edit root
 TreeTablePanel.message.recomputeError=Can't recompute Org. unit
