--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -15,8 +15,10 @@
 #
 PageRoleEditor.subtitle.basic=Basic
 PageRoleEditor.subtitle.activation=Activation
-PageRoleEditor.title.newRole=Create New Role
-PageRoleEditor.title.editingRole=Role '{0}' details
+PageRoleEditor.title.newRole=Create
+PageRoleEditor.subtitle.newRole=new role
+PageRoleEditor.title.editingRole=Edit
+PageRoleEditor.subtitle.editingRole=role '{0}'
 PageRoleEditor.title.inducements=Inducements
 PageRoleEditor.title.assignments=Assignments
 PageRoleEditor.label.name=Name
