--- a/model/workflow-impl/pom.xml
+++ b/model/workflow-impl/pom.xml
@@ -149,6 +149,7 @@
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-test-util</artifactId>
             <version>2.3-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
