fixes for MID-1798 and MID-1776

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUser_sk_SK.utf8.properties
@@ -50,3 +50,7 @@ pageUser.title.editing={0} details
 pageUser.title.selectAssignable=Select object(s)
 pageUser.title.selectResource=Vybraté koncové systém(y)
 pageUser.userDetails=User details
+pageUser.title.newUser=Vytvor
+pageUser.subTitle.newUser=nového používateľa
+pageUser.title.editUser=Uprav
+pageUser.subTitle.edituser=používateľa '{0}'
