--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -14,8 +14,10 @@
 # limitations under the License.
 #
 
-page.title=New user
-page.subTitle=details
+pageUser.title.newUser=Create
+pageUser.subTitle.newUser=new user
+pageUser.title.editUser=Edit
+pageUser.subTitle.edituser=user '{0}'
 pageUser.userDetails=User details
 pageUser.title.editing={0}
 pageUser.accounts=Accounts
