Implemented hashCode & equals for XNodes. Changed RawType do deal with value content (not the wrapping element). Removed RawType.setXNode. Enhanced parser tests to deal with complex RawType.

--- a/infra/prism/src/test/resources/common/yaml/user-jack-modified.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack-modified.yaml
@@ -35,6 +35,9 @@ user:
     accountConstruction:
       howto: "Whatever"
       when: 1330080532000
+      value:
+      - ABC
+      - fullName : Nobody
   - id: 1113
     description: "Assignment 3"
   activation:
