--- a/infra/prism/src/test/resources/common/yaml/user-jack-object.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack-object.yaml
@@ -36,6 +36,9 @@ object:
     accountConstruction:
       howto: "Just do it"
       when: 1330080532000
+      value:
+      - ABC
+      - fullName : Nobody
   activation:
     enabled: true
     validFrom: 170717400000
