--- a/infra/prism/src/test/resources/common/yaml/user-jack-adhoc.yaml
+++ b/infra/prism/src/test/resources/common/yaml/user-jack-adhoc.yaml
@@ -24,6 +24,9 @@ user:
     accountConstruction:
       howto: "Just do it"
       when: 1330080532000
+      value:
+      - ABC
+      - fullName : Nobody
   activation:
     enabled: true
     validFrom: 170717400000
