implementation for debug utils/internals config page. MID-1812

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageInternals.properties
@@ -13,20 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-pageBase.midPointVersion=Version: ${pom.version}, describe: ${describe}
-pageBase.unknownBuildNumber=unknown
+page.title=Internals configuration
+PageInternals.offset=Offset
+PageInternals.button.changeTime=Change time
+PageInternals.title.internalsConfig=Internals config
+PageInternals.title.debugUtil=Debug util
+PageInternals.title.timeChange=Time change
+PageInternals.checkConsistency=Check consistency
+PageInternals.checkEncryption=Check encryption
+PageInternals.checkReadEncrypion=Check read encryption
+PageInternals.detailedDebugDump=Detailed debug dump
 
-#most common used button names, used also in PageBase subclasses
-PageBase.button.save=Save
-PageBase.button.update=Update
-PageBase.button.search=Search
-PageBase.button.back=Back
-PageBase.button.cancel=Cancel
-PageBase.button.saveAndRun=Save & Run
-PageBase.button.run=Run
-PageBase.button.delete=Delete
-PageBase.clearCssCache=Clear less/js cache
 
-WorkItemsPanel.name=Name
-WorkItemsPanel.assigned=Assigned to
-WorkItemsPanel.created=Created
