--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -111,6 +111,6 @@ PageAdmin.menu.top.configuration.security=Security
 PageAdmin.menu.top.configuration.development=Development
 PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
 PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
-PageAdmin.menu.top.configuration.timeTest=Time test
+PageAdmin.menu.top.configuration.internals=Internals configuration
 PageAdmin.menu.top.configuration.logging=Logging
 PageAdmin.menu.top.configuration.about=About
