assignment activation, disabled for now.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -45,6 +45,7 @@ ObjectTypeGuiDescriptor.shadow=Shadow
 ObjectTypeGuiDescriptor.focus=Focus
 ObjectTypeGuiDescriptor.report=Report
 ObjectTypeGuiDescriptor.reportOutput=Report output
+ObjectTypeGuiDescriptor.securityPolicy=Security policy
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
