Work on MID-1809 - implementation of new state popup window. Disabled for now since there are more urgent things to fix. Will continue in 2.4.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.properties
@@ -33,5 +33,6 @@ TreeTablePanel.expandAll=Expand all
 TreeTablePanel.moveRoot=Move root
 TreeTablePanel.deleteRoot=Delete root
 TreeTablePanel.recomputeRoot=Recompute root
+TreeTablePanel.recomputeTask=Recompute users in organization {0}
 TreeTablePanel.editRoot=Edit root
 TreeTablePanel.message.recomputeError=Can't recompute Org. unit
