repository tests fix.

--- a/repo/repo-sql-impl-test/sample-configurations/postgresql.properties
+++ b/repo/repo-sql-impl-test/sample-configurations/postgresql.properties
@@ -17,7 +17,7 @@
 embedded=false
 driverClassName=org.postgresql.Driver
 hibernateHbm2ddl=validate
-hibernateDialect=org.hibernate.dialect.PostgresPlusDialect
+hibernateDialect=com.evolveum.midpoint.repo.sql.util.MidPointPostgreSQLDialect
 jdbcPassword=midpoint
 jdbcUsername=midpoint
-jdbcUrl=jdbc:postgresql://localhost:5432/testing
+jdbcUrl=jdbc:postgresql://localhost:5432/midpoint
