small fix for serialization..and fixing starting in tomcat..

--- a/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
             classpath:ctx-model.xml,
             classpath*:ctx-workflow.xml,
             classpath*:ctx-notifications.xml,
-            classpath:ctx-camel-imports.xml,
+<!--             classpath:ctx-camel-imports.xml, -->
             /WEB-INF/ctx-webapp.xml,
             /WEB-INF/ctx-web-security.xml,
             /WEB-INF/ctx-init.xml
